--- a/style.css
+++ b/style.css
@@ -1,15 +1,173 @@
+html, body {
+	padding:0; 
+	margin:0; 
+	width:100%; 
+	overflow-x:hidden; 
+	background: #fff; 
+	font-size:100%;
+}
+
+body {
+	height:100%; 
+	overflow:hidden;
+}
+
+.wrapper {
+	display:block; 
+	min-width:320px; 
+}
+
+.menu {
+	position:
+	fixed; 
+	left:0; 
+	top:20px; 
+	width:100%; 
+	height:30px; 
+	background:transparent; 
+	z-index:100;
+}
+
+.menu ul {
+	padding:0; 
+	margin:0; 
+	list-style:none; 
+	width:100%; 
+	height:30px; 
+	text-align:right;
+
+}
+
+.menu ul li {
+	display:inline; 
+	color:#fff;
+	background:transparent;
+	margin:10; 
+	padding:5; 
+	
+	
+}
+
+.menu ul li:first-child {
+	float:left;
+}
+.menu ul li a {
+	font-family: 'Expressway', verdana, arial, sans-serif; 
+	font-weight: 800; 
+	text-decoration:none; 
+	color:rgba(255, 255, 255, 1); 
+	line-height:5px; 
+	margin:0 px; 
+	font-size:70%;
+	text-shadow: 0px 1px 15px rgba(0, 0, 0, 5);
+}
+
+.menu ul li a:hover {
+	text-decoration:underline;
+}
+
+.curtain {
+	position:fixed; 
+	top:0; 
+	padding:0; 
+	width:100%; 
+	min-height:100%; 
+	box-shadow:0 5px 10px rgba(0,0,0,0.8); 
+	opacity:0;
+	filter: alpha(opacity=0); 
+	overflow:hidden;
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+}
+
+.curtain:first-child {
+	position:relative;
+}
+
+.overlay {
+	position:absolute; 
+	left:0; 
+	top:0; 
+	width:100%; 
+	height:100%; 
+	z-index:50;
+}
+
+.inner {
+	display:block; 
+	width:95%; 
+	min-width:300px; 
+	margin:0 auto; 
+	padding:20px 10px 40px 10px; 
+	text-align:center; 
+	position:relative; 
+	z-index:100;
+}
+
+
+.bg {
+	display:block; 
+	position:absolute; 
+	z-index:-1;
+}
+
+
+@media only screen and (max-width: 1024px){
+html, body {font-size:80%;}
+}
+
+
 .parallax-window {
     min-height: 600px;
     background: transparent;
 }
 
 
-#bg img{
+
+#background img{
     width: 100%;
-    position: relative; top: 0; left: 0;
+    height:300%;
+     position: absolute; top: 0; left: 0;
 }
 
 #footer img{
     width: 100%;
+    height:300%;
      position: absolute; top: 0; left: 0;
+     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
 }
+
+#test img{
+    width: 100%;
+
+
+}
+
+#abstract {
+	text-align:left;
+	-webkit-columns: 300px 2;
+   -moz-columns: 300px 2;
+        columns: 300px 2;
+        font-family: 'Larish Neue', verdana, arial, sans-serif; 
+}
+
+section {
+	background-color: transparent;
+	box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
+	text-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
+    height: 350px;
+    column-fill: auto;
+  margin:50px 65px 15px 65px;
+  padding:20px;
+  column-fill: auto;
+  -webkit-columns:2 230px;
+  -moz-columns: 2 230px;
+  columns: 2 230px;
+  -webkit-column-gap: 4em;
+  -moz-column-gap: 4em;
+  -column-gap: 4em;
+  -webkit-column-rule: 2px outset #ddd;
+  -moz-column-rule: 2px outset #ddd;
+  column-rule: 2px outset #ddd;
+  }
+
+
