--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ a {
 	vertical-align: text-center;
 	line-height: 100%;
 
+
 }
 
 
@@ -341,7 +342,7 @@ width:300px;
 #chapter_transition {
 	width:100%;
 	height:300px;
-	background: red; /* For browsers that do not support gradients */
+	background: blue; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(rgba(255,0,0,1),rgba(255,0,0,0)); /*Safari 5.1-6*/
     background: -o-linear-gradient(rgba(0,0,255,1),rgba(0,0,255,0)); /*Opera 11.1-12*/
     background: -moz-linear-gradient(rgba(0,0,255,1),rgba(0,0,255,0)); /*Fx 3.6-15*/
@@ -365,19 +366,119 @@ width:300px;
 	font-size: 18px;
 }
 
+#thanks_stuff {
+	width:100%;
+	height:100%;
+}
+
 .thank_you {
 	
 	font-family: "Circular", Helvetica, serif;
-	font-size: 80px;
-	transform : scale(2.3,1);
-	-webkit-transform:scale(2.3,1); /* Safari and Chrome */
-    -moz-transform:scale(2.3,1); /* Firefox */
-    -ms-transform:scale(2.3,1); /* IE 9 */
-    -o-transform:scale(2.3,1); /* Opera */
-    transform:scale(2.3,1); /* W3C */
+	font-size: 130px;
 	text-align:center;
 	color:white;
 	-webkit-filter: drop-shadow(0px 0px 2px #222);
 }
+
+.footnote {
+	position: relative;
+    display: inline-block;
+    font-family: "Stanley", Times, serif;
+	font-style: italic;
+	vertical-align: super;
+	font-size: 50%;
+	font-weight:bold;
+	color:blue;
+}
+
+.footnote-content-image {
+    display: none;
+    position: absolute;
+    
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);    
+    padding: 12px 16px;
+
+}
+
+.footnote-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border: 2px solid blue;
+    padding: 12px;
+    font-family: "Circular", Helvetica, serif;
+    font-size: 14px;
+    font-weight:normal;
+    font-style:normal;
+    z-index:1000000;
+    text-align:justify;
+}
+
+.footnote:hover .footnote-content {
+    display: block;
+}
+
+.footnote:hover .footnote-content-image {
+    display: block;
+}
+
+.chapter_big_image {
+	width:100%;
+	height:100%;
+	position:absolute;
+	
+}
+
+#one {
+	padding-top:100px;
+    background: url("img/chapter_001/chimpanzee_001.gif");
+    background-size: 100%;
+
+    background-repeat: no-repeat;
+}
+
+#three {
+	padding-top:100px;
+    background: url("img/chapter_001_1/science.gif");
+    background-size: 100%;
+
+    background-repeat: no-repeat;
+}
+
+#four {
+	padding-top:100px;
+    background: url("img/chapter_002_2/jester_top.gif");
+    background-size: 100%;
+
+    background-repeat: no-repeat;
+}
+
+#five {
+	padding-top:100px;
+    background: url("img/chapter_003/agloe_002.gif");
+    background-size: 100%;
+
+    background-repeat: no-repeat;
+}
+
+#six {
+	padding-top:100px;
+    background: url("img/chapter_004/surgeon.gif");
+    background-size: 100%;
+
+    background-repeat: no-repeat;
+}
+
+#seven {
+	padding-top:100px;
+    background: url("img/chapter_005/great_moon_hoax.gif");
+    background-size: 100%;
+
+    background-repeat: no-repeat;
+}
+
+
 
 
