--- a/style.css
+++ b/style.css
@@ -366,6 +366,22 @@ width:300px;
 	font-size: 18px;
 }
 
+
+.quote {
+	font-family: "Stanley", Times, serif;
+	font-style: italic;
+	font-size: 24px;
+	border: 1px solid black;
+    padding: 12px;
+    width:700px;
+    text-align:right;
+    line-height:24px;
+    float: right;
+    background:white;
+ 
+
+}
+
 #thanks_stuff {
 	width:100%;
 	height:100%;
@@ -414,6 +430,7 @@ width:300px;
     font-style:normal;
     z-index:1000000;
     text-align:justify;
+    line-height:14px;
 }
 
 .footnote:hover .footnote-content {
@@ -478,6 +495,8 @@ width:300px;
 
     background-repeat: no-repeat;
 }
+
+
 
 
 
