--- a/style.css
+++ b/style.css
@@ -805,17 +805,39 @@ user-select: none;
 
 
  #intro_animated_pik {
-	margin:0 auto;
-	padding:20px;
-	background: url("img/believe_it_or_not.gif");
-	width:500px;
-	height:500px;
-	background-size: 500px;
-	background-repeat: no-repeat no-repeat;
-	background-position: center;
+	left: 50%;
+	top:50%;
+	position:absolute;
+	width:100vw;
+	height:100vh;
+    -webkit-filter: blur(0px);
+	
+	z-index:10000000000000;
+	-webkit-transition: all 3s; /* Safari */
 
-	z-index:10000000;
-	backdrop-filter: blur(100px) grayscale(100%);
+
+}
+
+#intro_animated_pik img {
+	cursor: wait;
+	position:relative;
+	left: -50%;
+	top:-50%;
+	display:block;
+	margin:0 auto;
+	width:90%;
+	height:100%;
+	-webkit-filter: drop-shadow(0px 0px 20px #000000);
+
+
+}
+
+#intro_animated_pik.rotated{
+    transform: rotate(1800deg);
+    -webkit-filter: blur(10px);
+    width:0vw;
+    height:0vh;
+
 }
 
 #big_fancy_text {
