--- a/style.css
+++ b/style.css
@@ -807,7 +807,7 @@ user-select: none;
  #intro_animated_pik {
 	left: 50%;
 	top:50%;
-	position:absolute;
+	position:fixed;
 	width:100vw;
 	height:100vh;
     -webkit-filter: blur(10px);
@@ -857,3 +857,25 @@ font-stretch: expanded;
 -webkit-filter: drop-shadow(0px 0px 2px #333);
 
 }
+
+.hoax_footnote {
+	font-family: "Circular", Helvetica, serif;
+	font-weight:normal;
+	font-style:italic;
+	color:white;
+	font-size:50%;
+	vertical-align:super;
+	-webkit-filter: drop-shadow(0px 0px 2px #222);
+	display:inline;
+	background: red; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(right,rgba(255,0,0,0),rgba(255,0,0,1)); /*Safari 5.1-6*/
+    background: -o-linear-gradient(left,rgba(255,0,0,0),rgba(255,0,0,1)); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(left,rgba(255,0,0,0),rgba(255,0,0,1)); /*Fx 3.6-15*/
+    background: linear-gradient(to left, rgba(255,0,0,0), rgba(255,0,0,1)); /*Standard*/
+    -webkit-transition: width 2s, -webkit-transform 2s; /* Safari */
+    transition: width 2s, transform 2s;
+
+}
+
+
+
