--- a/style.css
+++ b/style.css
@@ -118,6 +118,20 @@ a {
     text-decoration: none;
 }
 
+a.in_text {
+
+	color: white;
+    text-decoration: none;
+    -webkit-filter: drop-shadow(0px 0px 2px #222);
+}
+
+a.in_text:hover {
+
+	color: black;
+    text-decoration: none;
+    -webkit-filter: drop-shadow(0px 0px 2px #222);
+}
+
 #index {
 	width:100%;
 	height:100%;
@@ -914,7 +928,7 @@ font-stretch: expanded;
 .list {
 	
 	font-size: 14px;
-	box-shadow: 0px 0px 20px 0px rgba(0,0,255,0.4); 
+	border: 1px solid black;
     padding: 12px;
     max-width:600px;
     text-align:left;
@@ -930,7 +944,7 @@ font-stretch: expanded;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-*/
+*
 
 
 
