--- a/ipad.css
+++ b/ipad.css
@@ -16,7 +16,7 @@ body {
 #ipad {
 	padding:30px;
 	top:25%;
-	font-family: "Stanley", Times, serif;
+	font-family: "Stanley", Times, sans-serif;
 	font-size: 80px;
 	color:white;
 	-webkit-filter: drop-shadow(0px 0px 3px #222);
