--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
 	margin: 0;
     height: 100%;
     width:100%;
-	font-family: "Circular", Helvetica, serif;
+	font-family: "Circular", Helvetica, sans-serif;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
